tests/snapshots/tui_render__network_tab_network_latency.snap
---
source: tests/tui_render.rs
expression: output
---
│ NAVIGATION            Overview   Interfaces   Routes   DNS   Connectivity > Latency   Trace   Conn
│   Dashboard         ┌ Latency ───────────────────────────────────────────────────────────────────┐
│   System +          │ Target    1.1.1.1                                                          │
│ > Network +         │  Run    press Enter to set target, then g                                  │
│   Discovery +       └────────────────────────────────────────────────────────────────────────────┘
│   Scanner -         ┌ Result ────────────────────────────────────────────────────────────────────┐
│   Security x        │ Icmp  4/4 packets, 0% loss                                                 │
│   Monitor |         │  min 17.0 ms   avg 18.0 ms   max 19.0 ms   jitter 0.6 ms                   │
│   Doctor x          │  #@@@                                                                      │
│   Reports           │                                                                            │
│   Snapshots -       │                                                                            │
│   Settings          │                                                                            │
│                     │                                                                            │
│ 88/100 (B)          │                                                                            │
│ Security score      │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     └────────────────────────────────────────────────────────────────────────────┘
 -> Navigate   Enter Open   / Search   r Refresh   ? Help   q Quit
  Tab next screen   Ctrl+P Palette
