tests/snapshots/tui_render__network_tab_network_routes.snap
---
source: tests/tui_render.rs
expression: output
---
│ NAVIGATION            Overview   Interfaces > Routes   DNS   Connectivity   Latency   Trace   Conn
│   Dashboard         ┌ Routes ────────────────────────────────────────────────────────────────────┐
│   System +          │Family  Destination         Gateway            Interface    Metric  Role    │
│ > Network +         │> ipv4  0.0.0.0/0           192.168.1.1        wlp3s0       600     default │
│   Discovery +       │ipv4    192.168.1.0/24      -                  wlp3s0       600             │
│   Scanner -         │                                                                            │
│   Security x        │                                                                            │
│   Monitor |         │                                                                            │
│   Doctor x          │                                                                            │
│   Reports           │                                                                            │
│   Snapshots -       │                                                                            │
│   Settings          │                                                                            │
│                     │                                                                            │
│ 88/100 (B)          │                                                                            │
│ Security score      │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     └────────────────────────────────────────────────────────────────────────────┘
 -> Navigate   Enter Open   / Search   r Refresh   ? Help   q Quit
  Tab next screen   Ctrl+P Palette
