tests/snapshots/tui_render__overlay_error.snap
---
source: tests/tui_render.rs
expression: "render_app(&mut app, 100, 30)"
---
│ NAVIGATION          ┌ OVERVIEW ──────────────────────────────────────────────────────────────────┐
│ > Dashboard         │Host        zbook                                                           │
│   System +          │OS          Ubuntu 24.04 24.04                                              │
│   Network +         │Kernel      6.8.0-88-generic                                                │
│   Discovery +       └────────────────────────────────────────────────────────────────────────────┘
│   Scanner -         ┌ HEALTH ────────────────────────────────────────────────────────────────────┐
│   Security x        │ System    +    Routes    +                                                 │
│   Monitor |         │ CPU       +    DNS       +                                                 │
│   Doctor x          │ Memory    +    Internet  +                                                 │
│   Reports      ┌ ERROR ─────────────────────────────────────────────────────────┐                │
│   Snapshots -  │!  PERMISSION_DENIED                                            │                │
│   Settings     │                                                                │                │
│                │Reason                                                          │                │
│ 88/100 (B)     │  blocking traffic requires root on Linux                       │────────────────┘
│ Security score │                                                                │────────────────┐
│                │Required                                                        │                │
│                │  Requires administrator/root privileges                        │                │
│                │  run the command with sudo, or as root                         │────────────────┘
│                │                                                                │────────────────┐
│                │Enter for technical details, Esc to close                       │                │
│                └────────────────────────────────────────────────────────────────┘────────────────┘
│                     ┌ FINDINGS ──────────────────────────────────────────────────────────────────┐
│                     │ > x ERROR  Host firewall appears disabled                                  │
│                     │   - INFO  SSH is listening on all interfaces                               │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     └────────────────────────────────────────────────────────────────────────────┘
 Esc Back
  Tab next screen   Ctrl+P Palette
