tests/snapshots/tui_render__overlay_input.snap
---
source: tests/tui_render.rs
expression: "render_app(&mut app, 100, 30)"
---
│ NAVIGATION          ┌ OVERVIEW ──────────────────────────────────────────────────────────────────┐
│ > Dashboard         │Host        zbook                                                           │
│   System +          │OS          Ubuntu 24.04 24.04                                              │
│   Network +         │Kernel      6.8.0-88-generic                                                │
│   Discovery +       └────────────────────────────────────────────────────────────────────────────┘
│   Scanner -         ┌ HEALTH ────────────────────────────────────────────────────────────────────┐
│   Security x        │ System    +    Routes    +                                                 │
│   Monitor |         │ CPU       +    DNS       +                                                 │
│   Doctor x          │ Memory    +    Internet  +                                                 │
│   Reports           │ Storage   !    Firewall  !                                                 │
│   Snapshots -       │ GPU       +    Processes +                                                 │
│   Settings        ┌ INPUT ───────────────────────────────────────────────────┐                   │
│                   │Target                                                    │                   │
│ 88/100 (B)        │                                                          │───────────────────┘
│ Security score    │  > 192.168.1.0/24_                                       │───────────────────┐
│                   │                                                          │                   │
│                   │  Enter confirm    Esc cancel                             │                   │
│                   └──────────────────────────────────────────────────────────┘───────────────────┘
│                     ┌ RESOURCES ─────────────────────────────────────────────────────────────────┐
│                     │CPU       #####.......   42.0%                                              │
│                     └────────────────────────────────────────────────────────────────────────────┘
│                     ┌ FINDINGS ──────────────────────────────────────────────────────────────────┐
│                     │ > x ERROR  Host firewall appears disabled                                  │
│                     │   - INFO  SSH is listening on all interfaces                               │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     └────────────────────────────────────────────────────────────────────────────┘
 Esc Back
  Tab next screen   Ctrl+P Palette
