tests/snapshots/tui_render__overlay_palette.snap
---
source: tests/tui_render.rs
expression: "render_app(&mut app, 100, 30)"
---
│ NAVIGATION          ┌ OVERVIEW ──────────────────────────────────────────────────────────────────┐
│ > Dashboard         │Host        zbook                                                           │
│   System +          │OS          Ubuntu 24.04 24.04                                              │
│   Network +         │Kernel      6.8.0-88-generic                                                │
│   Discovery +       └────────────────────────────────────────────────────────────────────────────┘
│   Scanner -         ┌ HEALTH ────────────────────────────────────────────────────────────────────┐
│   Security x        │ System    +    Routes    +                                                 │
│   Monitor |         │ CPU       +    DNS       +                                                 │
│   Doctor x          │ Memory    +    Internet  +                                                 │
│   Reports           │ Storage   !    Firewall  !                                                 │
│   Snapshots -       │ GPU       +    Processes +                                                 │
│   Settings       ┌ COMMAND PALETTE ───────────────────────────────────────────┐                  │
│                  │> scan                                                      │                  │
│ 88/100 (B)       │                                                            │──────────────────┘
│ Security score   │ > Scan Ports   scanner screen                              │──────────────────┐
│                  │   Run Integrity Scan   compare against baseline            │                  │
│                  │                                                            │                  │
│                  │ Type to filter commands   Enter run   Esc close            │──────────────────┘
│                  └────────────────────────────────────────────────────────────┘──────────────────┐
│                     │CPU       #####.......   42.0%                                              │
│                     └────────────────────────────────────────────────────────────────────────────┘
│                     ┌ FINDINGS ──────────────────────────────────────────────────────────────────┐
│                     │ > x ERROR  Host firewall appears disabled                                  │
│                     │   - INFO  SSH is listening on all interfaces                               │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     └────────────────────────────────────────────────────────────────────────────┘
 Esc Back
  Tab next screen   Ctrl+P Palette
