tests/snapshots/tui_render__scanner_tab_hostscan.snap
---
source: tests/tui_render.rs
expression: output
---
│ NAVIGATION            Port scan > Host scan   Nmap
│   Dashboard         ┌ Host scan ─────────────────────────────────────────────────────────────────┐
│   System +          │Host discovery runs on the Discovery screen.                                │
│   Network +         │It uses the same core engine (neighbor table / ICMP / TCP probes / nmap).   │
│   Discovery +       │                                                                            │
│ > Scanner -         │Press Tab to reach Discovery, or use the command palette (Ctrl+P).          │
│   Security x        │                                                                            │
│   Monitor |         │                                                                            │
│   Doctor x          │                                                                            │
│   Reports           │                                                                            │
│   Snapshots -       │                                                                            │
│   Settings          │                                                                            │
│                     │                                                                            │
│ 88/100 (B)          │                                                                            │
│ Security score      │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     └────────────────────────────────────────────────────────────────────────────┘
 -> Navigate   Enter Open   / Search   r Refresh   ? Help   q Quit
  ←/→ field   Space toggle   1/2/3 tabs   g start scan   e export
