tests/snapshots/tui_render__scanner_tab_nmap.snap
---
source: tests/tui_render.rs
expression: output
---
│ NAVIGATION            Port scan   Host scan > Nmap
│   Dashboard         ┌ Nmap ──────────────────────────────────────────────────────────────────────┐
│   System +          │nmap is not installed.                                                      │
│   Network +         │                                                                            │
│   Discovery +       │Basic discovery works without nmap (neighbor table, ICMP, TCP probes).      │
│ > Scanner -         │Install nmap to enable the nmap method; netro detects it automatically.     │
│   Security x        │                                                                            │
│   Monitor |         │                                                                            │
│   Doctor x          │                                                                            │
│   Reports           │                                                                            │
│   Snapshots -       │                                                                            │
│   Settings          │                                                                            │
│                     │                                                                            │
│ 88/100 (B)          │                                                                            │
│ Security score      │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     └────────────────────────────────────────────────────────────────────────────┘
 -> Navigate   Enter Open   / Search   r Refresh   ? Help   q Quit
  ←/→ field   Space toggle   1/2/3 tabs   g start scan   e export
